<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/keyvalueoperationButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/keyvaluelist_add_button"
            android:layout_width="100dp"
        	android:layout_height="35dp"
        	android:layout_gravity="center_vertical|center_horizontal|center"
        	android:gravity="center_vertical|center_horizontal"
        	android:text="@string/keyvaluelist_add_button_title"
        	android:textColor="#000000" />
        
        <Button
        	android:id="@+id/keyvaluelist_delete_button"
        	android:layout_width="100dp"
        	android:layout_height="35dp"
        	android:layout_gravity="center_vertical|center_horizontal|center"
        	android:gravity="center_vertical|center_horizontal"
        	android:text="@string/keyvaluelist_delete_button_title"
        	android:textColor="#000000" />
        
        <Button
        	android:id="@+id/keyvaluelist_refresh_button"
        	android:layout_width="100dp"
        	android:layout_height="35dp"
        	android:layout_gravity="center_vertical|center_horizontal|center"
        	android:gravity="center_vertical|center_horizontal"
        	android:text="@string/keyvaluelist_refresh_button_title"
        	android:textColor="#000000" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/keyvaluelist_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/keyvaluelist_has_no_records"
        tools:context=".MainActivity" />
    
    <ListView
            android:id="@+id/keyvalue_listview"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:choiceMode="singleChoice" />
    
    <ProgressBar
        android:id="@+id/keyvaluelist_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="320dp"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone" />
</LinearLayout>
